[project]
name = "text-to-sql-agent"
version = "2.0.0"
requires-python = ">=3.10"

dependencies = [
    "langchain>=1.1.0",
    "langchain-core>=1.3.0",
    "langchain-community>=0.3.20",
    "langchain-groq>=0.3.2",
    "snowflake-connector-python>=3.12.2",
    "streamlit>=1.32.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
]